# wiktparse

./: .gitignore  AbstractBufferedLiner.h  AbstractLiner.cpp  AbstractLiner.h  Bz2Liner.cpp  Bz2Liner.h  CMakeLists.txt  Comments.cpp  Comments.h  Index.cpp  Index.h  Progress.cpp  Progress.h  README.md  Template.cpp  Template.h  TemplateParser.cpp  Templates.cpp  Templates.h  WikiChunker.cpp  WikiChunker.h  WikiData.cpp  WikiData.h  WikiFile.cpp  WikiFile.h  WikiName.cpp  WikiName.h  Xml.cpp  Xml.h  main.cpp  tagTree.cpp  tags.cpp  tags.h  textUtils.cpp  textUtils.h  titles.cpp  wikiData.cpp  wikiData.h  xml.cpp  xml.h
doc/: headers.md  tag_names.txt  tags.md  wikitext.md
dump/: .gitignore  getWithIndex.sh  run.sh
dump/Wikidata/: .gitignore
dumpWP/: .gitignore  getenwiki.sh
liner/: AbstractBufferedLiner.cpp  AbstractLiner.h  Bz2Liner.h  TextLiner.cpp
reader/: Index.cpp  Index.h  WikiFile.cpp  WikiFile.h  WikiName.h
res/: ISO_639-1_to_ISO_639-3_Mapping.csv
src/: WikiChunker.cpp  main.cpp  titles.h
src/comments/: Comments.h
src/headers/: headerTree.cpp  headers.h
src/liner/: TextLiner.h
src/markup/: BaseParser.h  Comments.h  Markup.h  MarkupParser.cpp  MarkupParser.h  Whitespace.h  WikiText.h
src/markup/tags/: Tag.h  TagFactory.h  TagHandler.h  TagParser.h  TaggedContent.h
src/markup/wikinodes/: Header.h  HeaderParser.h  Template.h  TemplateParser.cpp  TemplateParser.h  WikiLink.h  WikiLinkParser.h
src/markup/wikitext/: Header.h  HeaderParser.h  WikiLink.h  WikiLinkParser.h
src/reader/: Index.cpp  Index.h  WikiName.cpp
src/tag/: headers.cpp
src/tags/: BaseParser.h  Parser.h  Tag.h  TagHandler.h  TagParser.h  TagStreamParser.h
src/template/: Template.cpp  TemplateParser.cpp  text.h
src/util/: Progress.cpp  Progress.h  Whitespace.h  structs.h  textUtils.cpp  textUtils.h
src/wikitext/: CompositeText.h  Parser.h  Tag.h  TagFactory.h  TagHandler.h  TagParser.h  Template.h  TemplateParser.cpp  TemplateParser.h  TextParser.h  old_Template.cpp  old_Template.h  old_TemplateParser.cpp  old_TemplateParser.h  old_text.cpp  old_text.h  templates.cpp  templates.h  text.cpp  text.h
src/xml/: Comments.cpp  Comments.h  Xml.cpp  Xml.h  old2_Comments.cpp  old2_Comments.h
src1/elements/: ContainerElement.h  ExternalLink.cpp  ExternalLink.h  Header.cpp  Header.h  LeafElement.h  Tag.cpp  Tag.h  TaggedContent.cpp  TaggedContent.h  Template.cpp  Template.h  TextElement.cpp  TextElement.h  TextFragment.cpp  TextFragment.h  WikiElement.cpp  WikiElement.h  WikiLink.cpp  WikiLink.h  WikiVisitor.h
src1/factory/: TagFactory.cpp  TagFactory.h
src1/handlers/: TagHandler.h
src1/parser/: Parser.cpp  Parser.h  ParserError.cpp  ParserError.h
src1/preprocessor/: Preprocessor.cpp  Preprocessor.h
tag/: tagTree.h  tags.h
template/: TemplateParser.h  templates.cpp
tests/: CMakeLists.txt  CommentTest.cpp  CommentsTest.cpp  CompositeTextTest.cpp  HeaderTest.cpp  NowikiTest.cpp  TagTest.cpp  WikiLinkTest.cpp  oldCommentTest.cpp  test_external_link_parsing.cpp  test_full_parsing.cpp  test_header_parsing.cpp  test_preprocessing.cpp  test_tag_parsing.cpp  test_template_parsing.cpp  test_templates.cpp  test_utils.h  test_wikilink_parsing.cpp
util/: textUtils.cpp
work/: .gitignore  interesting_titles.txt  terms_to_extract.en.txt  terms_to_extract.enwiki.txt  terms_to_extract.eo.txt  terms_to_extract.fr.txt  terms_to_extract.pl.txt  terms_to_extract.txt
